test_src/compiler_errors/types/boolean/GreaterThanBoolError1.b
class GreaterThanBoolError1 {
    void test() {
        println(1 > false);
    }
}
